# learning_tiff_dng

./: .gitignore  CMakeLists.txt  CR11u_20240406_131907802.dng.pp3  README.md  main.cpp  parse_tiff.cpp  tiff_read.cpp  xmake.lua
include/: parse_ifd.h  tiff_ifd.h
py/: gamma_curve.py
src/: parse_ifd.cpp  tiff_ifd.cpp
